# gotil

./: .gitignore  BUILD.bazel  LICENSE  WORKSPACE  deps.bzl  go.mod  go.sum
cmd/: BUILD.bazel  main.go
comparator/: BUILD.bazel  comparable.go  comparator.go
core/: abstract_map.go  map.go
gomap/: gomap.go
treemap/: BUILD.bazel  gods.txt  gods_sync_1_cpu.txt  gods_sync_8_cpu.txt  gotil.txt  gotil_sync_1_cpu.txt  gotil_sync_8_cpu.txt  tree_map.go  tree_map_test.go
