load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/VolodymyrPobochii/gotil
# gazelle:proto disable_global
# gazelle:go_naming_convention import_alias

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)
