load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "comparator",
    srcs = [
        "comparable.go",
        "comparator.go",
    ],
    importpath = "github.com/pobochiigo/gotil/comparator",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_exp//constraints"],
)

alias(
    name = "go_default_library",
    actual = ":comparator",
    visibility = ["//visibility:public"],
)
