load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "treemap",
    srcs = [
        "gomap.go",
        "map.go",
        "tree_map.go",
    ],
    importpath = "github.com/VolodymyrPobochii/gotil/treemap",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_exp//constraints"],
)

alias(
    name = "go_default_library",
    actual = ":treemap",
    visibility = ["//visibility:public"],
)

go_test(
    name = "treemap_test",
    srcs = ["tree_map_test.go"],
    embed = [":treemap"],
)
